<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>


    <!-- Layout for content is here. This can be a RelativeLayout  -->
    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/label_webinar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/img_base" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_webinar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints=""
                    android:background="@drawable/border_text"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/title_webinar"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/description_webinar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_text"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/description_webinar"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLines="5"
                    android:minLines="2"
                    android:padding="15dp"
                    android:paddingTop="2dp"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/txt_expositor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_text"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/nombre_expositor"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/txt_Observacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_text"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/observacion"
                    android:inputType="textMultiLine|textPersonName"
                    android:lines="2"
                    android:maxLines="5"
                    android:minLines="2"
                    android:padding="15dp"
                    android:paddingTop="2dp"
                    android:scrollbars="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoDoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:hint="@string/link_webinar" />

                    <Button
                        android:id="@+id/image_button"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/image_button"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoUbi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:hint="@string/link_ubicacion" />

                    <Button
                        android:id="@+id/ubi_button"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/ubi_button"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/campoFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/fecha_lbl"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/fech_button"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/fecha_btn"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/campoHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/hora_lbl"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/hora_button"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/hora_btn"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lbl_fechafinal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/fecha_lbl"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_fecha_final"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/fecha_finalizar"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lbl_hora_final"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/hora_final"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_hora_final"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:text="@string/hora_btn"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modificar_webinar_button"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:padding="15dp"
                        android:text="@string/btn_modificar"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/save_webinar_button"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorAccent"
                        android:padding="15dp"
                        android:text="@string/save_webinar_button"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>

            </LinearLayout>
        </ScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>