<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <!-- Layout for content is here. This can be a RelativeLayout  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbltitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/lbl_title_register"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:background="@drawable/border_text"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_person"
            android:autofillHints="" />

        <EditText
            android:id="@+id/emailregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:background="@drawable/border_text"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:background="@drawable/border_text"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_lock"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spinner_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_spinner"
            android:ems="10"
            android:paddingVertical="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_webinar_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:text="@string/save_webinar_button"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/lbl_login" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>